--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -3,7 +3,7 @@
   <description>Inlines library code and provides testing framework</description>
   <version>3.52</version>
   <vendor>Egor Kulikov</vendor>
-  <idea-version since-build="8000"/>
+  <idea-version since-build="111.69"/>
 
   <application-components>
     <!-- Add your application components here -->
@@ -16,6 +16,9 @@
     <!-- Add your project components here -->
       <component>
           <implementation-class>net.egork.chelper.AutoSwitcher</implementation-class>
+      </component>
+      <component>
+          <implementation-class>net.egork.chelper.ChromeParser</implementation-class>
       </component>
   </project-components>
 
